--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@ html, body, #root, .App {
   font-family: textFont;
   width: 45%;
   height: 1500px;
-  /*padding-bottom: 400px;*/
+  padding-top: 400px;
   align-self: center;
 }
 
@@ -313,6 +313,15 @@ hr.break {
   padding-top: 400px;
   padding-bottom: 400px;
   align-self: center;
+}
+
+.linksCont {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  border-color: red;
+  border-width: thick;
+  margin-top: 75px;
 }
 
 .timelineCont {
